--- a/Resources/MyBlogTheme/styles.css
+++ b/Resources/MyBlogTheme/styles.css
@@ -1,9 +1,3 @@
-/**
-*  Publish Foundation theme
-*  Copyright (c) John Sundell 2019
-*  MIT license, see LICENSE file for details
-*/
-
 * {
     margin: 0;
     padding: 0;
@@ -137,6 +131,23 @@ a {
     font-size: 1.4em;
     margin-right: 10px;
     padding: 6px 10px;
+}
+
+.image-cropper {
+    width: 320px;
+    height: 320px;
+    position: relative;
+    border: 2px solid white;
+    -webkit-border-radius: 160px;
+    -moz-border-radius: 160px;
+    border-radius: 160px;
+    overflow:hidden;
+}
+.my-picture {
+    display: block;
+    margin: 0 auto;
+    height: auto;
+    width: 100%;
 }
 
 footer {
