--- a/Resources/MyBlogTheme/styles.css
+++ b/Resources/MyBlogTheme/styles.css
@@ -11,6 +11,10 @@ body {
     text-align: center;
 }
 
+img {
+    max-width: 600px;
+}
+
 .wrapper {
     max-width: 900px;
     margin-left: auto;
