--- a/Resources/MyBlogTheme/styles.css
+++ b/Resources/MyBlogTheme/styles.css
@@ -67,7 +67,7 @@ h2 {
 }
 
 p {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 a {
@@ -76,6 +76,15 @@ a {
 
 .description {
     margin-bottom: 40px;
+}
+
+ul {
+  padding-left: 5px;
+}
+
+li {
+  list-style-position: inside;
+
 }
 
 .item-list > li {
@@ -228,7 +237,8 @@ article p code.inline, article li code.inline {
 }
 
 pre {
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 pre code {
