--- a/Resources/MyBlogTheme/styles.css
+++ b/Resources/MyBlogTheme/styles.css
@@ -19,6 +19,7 @@ body {
 
 img {
     max-width: 600px;
+    margin-bottom: 15px;
 }
 
 .wrapper {
@@ -70,6 +71,10 @@ h1 {
 
 h2 {
     margin-bottom: 20px;
+}
+
+h3 {
+    margin-bottom: 15px;
 }
 
 p {
